[tool.poetry]
name = "ip-checker"
version = "1.0.0"
description = "A package to check IP information"
authors = ["Akshay Jain <aj2812@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
requests = "^2.27.1"
tenacity = "^8.0.1"
ipaddress = "^1.0.23"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"